Add configurable SSL verification

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
 # MBTA API key
 # Get your API key from https://api-v3.mbta.com/
 MBTA_API_KEY=your_mbta_api_key
+# Set to False to disable SSL certificate verification
+MBTA_SSL_VERIFY=True
